# battery-joule-thief

./: .gitmodules  README.md
app/: CMakeLists.txt  prj.conf
app/boards/arm/beirdo_battery_joule_thief_v1/: beirdo_battery_joule_thief_v1.dts
app/include/: app-adcs.h  app-charge-counters.h  app-charger.h  app-devices.h  app-display-screens.h  app-display.h  app-gpios.h  app-handlers.h  app-input-batteries.h  app-utils.h
app/src/: adcs.c  charge-counters.c  charger.c  display.c  gpios.c  input-batteries.c  main.c
easyeda/: 1-PCB_PCB_2020-10-18_22-15-15.json  1-Schematic_Battery Joule Thief.json
